--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "ciclomart_back",
   "version": "1.0.0",
-  "description": "Backend of ciclomart app made with express.js and node",
+  "description": "Ciclomart app backend made with express.js and node",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
     "json-server": "json-server --watch test-db.json --port 4000",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "author": "",
   "license": "ISC",
@@ -20,5 +22,8 @@
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "nodemon": "^3.1.9"
+  },
+  "devDependencies": {
+    "prettier": "^3.4.2"
   }
 }
