--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "json-server": "^1.0.0-beta.3",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "mysql2": "^3.12.0",
     "nodemon": "^3.1.9"
   },
   "devDependencies": {
