--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express": "^4.21.2",
     "json-server": "^1.0.0-beta.3",
     "jsonwebtoken": "^9.0.2",
+    "mercadopago": "^2.3.0",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "mysql2": "^3.12.0",
