--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@eslint/eslintrc": "^3.3.0",
     "@mysql/xdevapi": "^8.0.35",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
